--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
 
     "grunt": "~0.4.1",
     "grunt-contrib-concat": "~0.3.0",
-    "grunt-contrib-uglify": "~0.2.2"
+    "grunt-contrib-uglify": "~0.2.2",
+    "totoro": "~0.3.0",
+    "totoro-common": "~0.1.3"
   },
   "scripts": {
     "test": "make test"
