--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "grunt-contrib-concat": "~0.3.0",
     "grunt-contrib-uglify": "~0.2.2",
     "totoro": "~0.3.0",
-    "totoro-common": "~0.1.3"
+    "node-static": "~0.6.9"
   },
   "scripts": {
     "test": "make test"
