--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "grunt": "~0.4.1",
     "grunt-contrib-concat": "~0.3.0",
     "grunt-contrib-uglify": "~0.2.2",
+    "grunt-contrib-copy": "~0.4.1",
+    "grunt-contrib-clean": "~0.5.0",
     "totoro": "~0.3.0",
     "node-static": "~0.6.9"
   },
