--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "grunt-contrib-uglify": "~0.2.2",
     "grunt-contrib-copy": "~0.4.1",
     "grunt-contrib-clean": "~0.5.0",
+    "grunt-contrib-watch": "~0.5.3",
+    "grunt-contrib-connect": "~0.3.0",
+    "connect-livereload": " ~0.2.0",
     "totoro": "~0.3.0",
     "node-static": "~0.6.9"
   },
