--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "commander": "~1.1.1",
     "totoro": "~0.3.0",
     "node-static": "~0.6.9",
+    "shelljs": "~0.2.1",
     "grunt": "~0.4.1",
     "grunt-contrib-concat": "~0.3.0",
     "grunt-contrib-uglify": "~0.2.2",
