--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "seatools",
-  "version": "0.1.0a1",
+  "version": "0.1.0",
   "author": "popomore <a@chuo.me>",
   "description": "Seajs helpers that can build, debug and test.",
   "dependencies": {
